syntax = "proto3";

package appdirectWebhookIngester.Messages;

//Store an address.
message CompanyAddress {
string streetAddress1 = 1;
string streetAddress2 = 2;
string city = 3;
string state = 4;
string zipCode= 5;
}

//Store a companies location.
message CompanyLocation {
string name = 1;
CompanyAddress headquartersAddress = 2;
}

//Information regarding a set of contact details.
message ContactDetails {
string firstname = 1;
string Lastname = 2;
string emailAddress = 3;
string mobile = 4;
}

//Store information pertaining to a company.
message CompanyInformation {
string name = 1;
CompanyLocation location = 2;
}

//Store information pertaining to an Opco and the specific customer ordering the product.
message OpcoInformation {
string name = 1;
string opcoCustomerID = 2;
}

//Information regarding the details of an order.
message OrderDetails {
int32 quantity = 1;
string skuID = 2;
string packageID = 3;
}

//An event from AppDirect.
message AppDirectEvent {
string parterName =1;
CompanyInformation company = 2;
string externalAccountID = 3;
ContactDetails primaryContactDetails = 4;
OrderDetails order = 5;
OpcoInformation  opcoDetails = 6;
}
